--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^15.3.4",
+    "next": "^15.5.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.4"
@@ -24,7 +24,7 @@
     "@types/react-dom": "^19.1.6",
     "@types/recharts": "^1.8.29",
     "eslint": "9.29.0",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^15.5.9",
     "typescript": "^5.8.3"
   }
 }
